# airflow-spark-architecture-aws

./: .gitignore  README.md
airflow/: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
airflow/dags/: spark_job.py
app/dags/: my_dag.py
scripts/: airflow_instance_user_data.sh  airflow_startup.sh  airflow_user_data_v2.sh  docker_airflow_instance_user_data.sh  spark_instance_user_data.sh  vm_setup.sh
setup/: airflow.md
terraform/: .terraform.lock.hcl  main.tf  versions.tf
