[tool.poetry]
name = "airflow_poetry_environment"
version = "0.1.0"
description = ""
authors = ["Joshua Phillips <joshsouthby@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"apache-airflow-providers-amazon" = "8.11.0"
pyarrow = "*"
pandas = "2.1.3"
sqlalchemy = "1.4.50"
psycopg2-binary = "*"
"dbt-postgres" = "1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
